--- a/src/app/components/core/notifications/notification-service-modal/notification-service-modal.component.css
+++ b/src/app/components/core/notifications/notification-service-modal/notification-service-modal.component.css
@@ -5,6 +5,9 @@
   .field-body {
     flex-grow: 2 !important;
   }
+  .margin-bottom {
+    margin-bottom: -0.75rem;
+  }
 }
 
 .field.is-narrow {
@@ -59,4 +62,7 @@ hr {
   margin: 1.5rem 1rem;
 }
 
+.service-info-text {
+  padding-left: 16px;
+}
 
